k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopfast-ingress
  namespace: shopfast
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shopfast.live
        - www.shopfast.live
      secretName: shopfast-tls
  rules:
    - host: shopfast.live
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
          - path: /kafka
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: www.shopfast.live
      http:
        paths:
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: shopfast-test.live
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: www.shopfast-test.live
      http:
        paths:
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
